# prim-ord

./: CHANGELOG.md  README.md  default.nix  hie.yaml  prim-ord.cabal  release.nix  shell.nix
nix/: pkgs.nix
nix/extensions/: prim-ord.nix
nix/exts/: prim-ord.nix
src/Data/Ord/: Prim.hs
