cabal-version: 2.4

name:        prim-ord
category:    Data
version:     1.0.0
synopsis:    TODO 
description: TODO 

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-ord
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2
  GHC == 9.2.4
  GHC == 9.4.2

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-ord

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  default-extensions:
    ImportQualifiedPost MagicHash

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , base >= 4.15.1 && < 4.18

library
  import:         common
  hs-source-dirs: src

  ghc-options:
    -- `-j1` is set (as opposed to `-j`) because this package only exports one 
    -- module.
    -j1

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=4

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.10
    , prim-bool        >= 1.0.0  && < 1.1.0
    , prim-compat      >= 1.0.0  && < 1.1.0
    , template-haskell >= 2.17.0 && < 2.20

  exposed-modules:
    Data.Ord.Prim

